# aws-movie-poster-creator

./: README.md  lambda_bedrok_function.py  pyproject.toml
eg_images/: poster_2024-04-21-15-59-45
eg_prompts/: prompts.txt
lambda_function/: lambda_bedrok_function.py
